--- a/Donaciones.html
+++ b/Donaciones.html
@@ -133,48 +133,52 @@
         </div>
     </div>
 </section>
-<div class="titu">
+<div class="titulo">
     <h1>Galería de Organizaciones para Perros</h1>
 </div>
 
+<img id="myImg" src="IMG/Logo_eslogan_sinfondo.png" alt="Snow" style="width:100%;max-width:300px">
 
-<div class="responsive">
-    <img id="myImg" src="IMG/Logo_eslogan_sinfondo.png" alt="Snow" style="width:100%;max-width:300px">
-    <div id="myModal" class="modal">
-      <span class="close">&times;</span>
-      <img class="modal-content" id="img01">
-      <div id="caption"></div>
-    </div>
-  </div>
-  
-  <div class="responsive">
-    <img id="myImg" src="IMG/Logo_eslogan_sinfondo.png" alt="Snow" style="width:100%;max-width:300px">
-    <div id="myModal" class="modal">
-        <span class="close">&times;</span>
-        <img class="modal-content" id="img01">
-        <div id="caption"></div>
-      </div>
-    <div class="desc">Add a description of the image here</div>
-    </div>
-  </div>
-  
-  <div class="responsive">
+<div id="myModal" class="modal">
     <div class="gallery">
-        <img id="myImg" src="img_snow.jpg" alt="Snow" style="width:100%;max-width:300px">
+  <span class="close">&times;</span>
+  <img class="modal-content" id="img01">
+  <div id="caption"></div>
+  <div class="desc">Add a description of the image here1</div>
+</div>
+</div>
+<div id="myModal" class="modal">
+    <div class="gallery">
+  <span class="close">&times;</span>
+  <img class="modal-content" id="img01">
+  <div id="caption"></div>
+  <div class="desc">Add a description of the image here1</div>
+</div>
+</div>
+
+  
+<div class="responsive">
+    <div class="gallery">
+      <a target="_blank" href="IMG/Logo_eslogan_sinfondo.png">
+        <img src="IMG/Logo_eslogan_sinfondo.png"alt="Mountains" width="600" height="400">
       </a>
-      <div class="desc">Add a description of the image here</div>
+      <div class="desc">Add a description of the image here3</div>
     </div>
   </div>
   
   <div class="responsive">
     <div class="gallery">
       <a target="_blank" href="IMG/Logo_eslogan_sinfondo.png">
-        <img src="IMG/Logo_eslogan_sinfondo.png" alt="Mountains">
+        <img src="IMG/Logo_eslogan_sinfondo.png"alt="Mountains" width="600" height="400">
       </a>
-      <div class="desc">Add a description of the image here</div>
+      <div class="desc">Add a description of the image here2</div>
     </div>
   </div>
   
+
+
+
+
   
   <div class="clearfix"></div>
 
