--- a/Donaciones.html
+++ b/Donaciones.html
@@ -133,10 +133,10 @@
         </div>
     </div>
 </section>
-<div class="titulo">
+<!-- <div class="titulo">
     <h1>Galería de Organizaciones para Perros</h1>
-</div>
-
+</div> -->
+<!-- /*
 <img id="myImg" src="IMG/Logo_eslogan_sinfondo.png" alt="Snow" style="width:100%;max-width:300px">
 
 <div id="myModal" class="modal">
@@ -173,7 +173,21 @@
       </a>
       <div class="desc">Add a description of the image here2</div>
     </div>
-  </div>
+  </div>*/* -->
+
+  <section>
+    <div class ="ful-img" id="fulImgBox">
+        <img src="img/Logo_eslogan_sinfondo.png" id="fulImg" alt="">
+        <span onclick ="closeImg()">x</span>
+    </div>
+    <h1><span>ORGANIZACIONES</span></h1>
+    <div class="img-gallery">
+    <img src="img/Logo_eslogan_sinfondo.png" onclick="openfulImg()" alt="">
+    <img src="img/Logo_eslogan_sinfondo.png" onclick="openfulImg()"  alt="">
+    <img src="img/Logo_eslogan_sinfondo.png" onclick="openfulImg()"  alt="">
+    <img src="img/Logo_eslogan_sinfondo.png" onclick="openfulImg()"  alt="">
+    </div>
+  </section>
   
 
 
@@ -320,7 +334,7 @@
               modal.style.display = "none";
             }
             </script>
-            
+            <script src="Donacion.js"></script>
 </body>
 
 </html>
