cambios en modal

--- a/Donaciones.html
+++ b/Donaciones.html
@@ -133,69 +133,24 @@
         </div>
     </div>
 </section>
-<!-- <div class="titulo">
-    <h1>Galería de Organizaciones para Perros</h1>
-</div> -->
-<!-- /*
-<img id="myImg" src="IMG/Logo_eslogan_sinfondo.png" alt="Snow" style="width:100%;max-width:300px">
 
-<div id="myModal" class="modal">
-    <div class="gallery">
-  <span class="close">&times;</span>
-  <img class="modal-content" id="img01">
-  <div id="caption"></div>
-  <div class="desc">Add a description of the image here1</div>
-</div>
-</div>
-<div id="myModal" class="modal">
-    <div class="gallery">
-  <span class="close">&times;</span>
-  <img class="modal-content" id="img01">
-  <div id="caption"></div>
-  <div class="desc">Add a description of the image here1</div>
-</div>
-</div>
-
-  
-<div class="responsive">
-    <div class="gallery">
-      <a target="_blank" href="IMG/Logo_eslogan_sinfondo.png">
-        <img src="IMG/Logo_eslogan_sinfondo.png"alt="Mountains" width="600" height="400">
-      </a>
-      <div class="desc">Add a description of the image here3</div>
-    </div>
-  </div>
-  
-  <div class="responsive">
-    <div class="gallery">
-      <a target="_blank" href="IMG/Logo_eslogan_sinfondo.png">
-        <img src="IMG/Logo_eslogan_sinfondo.png"alt="Mountains" width="600" height="400">
-      </a>
-      <div class="desc">Add a description of the image here2</div>
-    </div>
-  </div>*/* -->
-
-  <section>
+<section>
     <div class ="ful-img" id="fulImgBox">
         <img src="img/Logo_eslogan_sinfondo.png" id="fulImg" alt="">
         <span onclick ="closeImg()">x</span>
     </div>
     <h1><span>ORGANIZACIONES</span></h1>
     <div class="img-gallery">
-    <img src="img/Logo_eslogan_sinfondo.png" onclick="openfulImg()" alt="">
-    <img src="img/Logo_eslogan_sinfondo.png" onclick="openfulImg()"  alt="">
-    <img src="img/Logo_eslogan_sinfondo.png" onclick="openfulImg()"  alt="">
-    <img src="img/Logo_eslogan_sinfondo.png" onclick="openfulImg()"  alt="">
+    <img src="img/Logo_eslogan_sinfondo.png" onclick="openfulImg(this.src)"  alt="">
+    <img src="img/Logo_eslogan_sinfondo.png" onclick="openfulImg(this.src)"  alt="">
+    <img src="img/Logo_eslogan_sinfondo.png" onclick="openfulImg(this.src)"  alt="">
+    <img src="img/Logo_eslogan_sinfondo.png" onclick="openfulImg(this.src)"  alt="">
     </div>
   </section>
-  
 
-
-
-
-  
-  <div class="clearfix"></div>
-
+  <section>
+    
+  </section>
 
 
 
