--- a/Donaciones.html
+++ b/Donaciones.html
@@ -137,7 +137,7 @@
 
 <section>
     <div class ="ful-img" id="fulImgBox">
-        <img src="img/LOGO_ORGANIZACION2.jpg" id="fulImg" alt="">
+        <!-- <img src="img/LOGO_ORGANIZACION2.jpg" id="fulImg" alt=""> -->
         <span onclick ="closeImg()">x</span>
     </div>
    
@@ -148,40 +148,27 @@
     <img src="img/LOGO-ORGANIZACION3.jpg" onclick="openfulImg(this.src)"  alt="">
     <img src="img/LOGO_ORGANIZACION4.jpg" onclick="openfulImg(this.src)"  alt="">
     </div>
-    <div class="modal-content1">
-            <div class="modal-header">
-              <span class="close">&times;</span>
-              <h2>Modal Header</h2>
-            </div>
-            <div class="modal-body">
-            <img src="img/LOGO_ORGANIZACION2.jpg" id="fulImg" alt="">
-              <p>Some text in the Modal Body</p>
-              <p>Some other text...</p>
-            </div>
-            <div class="modal-footer">
-              <h3>Modal Footer</h3>
-            </div>
-    </div>
-
-    <div class="modal-content1">
+    <div class="modal-content" id="model">
         <div class="modal-header">
-          <span class="close">&times;</span>
-          <h2>Modal Header</h2>
+            <span onclick="closeImg()" class="close">&times;</span>
+            <h2>Modal Header</h2>
         </div>
         <div class="modal-body">
         <img src="img/LOGO_ORGANIZACION2.jpg" id="fulImg" alt="">
-          <p>Some text in the Modal Body</p>
-          <p>Some other text...</p>
+            <p>Some text in the Modal Body</p>
+            <p>Some other text...</p>
         </div>
         <div class="modal-footer">
-          <h3>Modal Footer</h3>
-        </div>
-</div>
+            <h3>Modal Footer</h3>
+        </div> 
+    </div>
+
+
   </section>
 
   <section>
     
-
+<!-- 
 <!-- Trigger/Open The Modal -->
 <div id="myBtn">Open Modal</button>
 
@@ -203,7 +190,7 @@
     </div>
   </div>
 
-</div>
+</div> -->
 
   </section>
 
