--- a/prueba.html
+++ b/prueba.html
@@ -1,136 +1,193 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {font-family: Arial, Helvetica, sans-serif;}
 
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+      body {
+        font-family: Arial, Helvetica, sans-serif;
+      }
 
-/* Modal Content */
-.modal-content {
-  position: relative;
-  background-color: #fefefe;
-  margin: auto;
-  padding: 0;
-  border: 1px solid #888;
-  width: 80%;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-  -webkit-animation-name: animatetop;
-  -webkit-animation-duration: 0.4s;
-  animation-name: animatetop;
-  animation-duration: 0.4s
-}
 
-/* Add Animation */
-@-webkit-keyframes animatetop {
-  from {top:-300px; opacity:0} 
-  to {top:0; opacity:1}
-}
+      /* The Modal (background) */
+      .modal {
+        display: flex;
+        z-index: 1;
+        /* Sit on top */
+        padding: 0;
+        /* Location of the box */
+        left: 0;
+        top: 0;
+        width: 100%;
+        /* Full width */
+        height: 100vh;
+        /* Full height */
+        overflow: auto;
+        /* Enable scroll if needed */
+        background-color: rgb(0, 0, 0);
+        /* Fallback color */
+        background-color: rgba(0, 0, 0, 0.4);
+        /* Black w/ opacity */
+        align-items: center;
+        justify-content: center;
+        position: fixed;
+        border: 1px solid #888;
+      }
 
-@keyframes animatetop {
-  from {top:-300px; opacity:0}
-  to {top:0; opacity:1}
-}
+      /* Modal Content */
+      .modal-content {
+        background-color: #fefefe;
+        padding: 0;
+        border: 1px solid #888;
+        width: 95%;
+        /* Ajusta el valor del ancho según tus preferencias */
+        max-width: 800px;
+        /* Establece un ancho máximo para evitar que se vuelva demasiado grande en pantallas grandes */
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        -webkit-animation-name: animatetop;
+        -webkit-animation-duration: 0.4s;
+        animation-name: animatetop;
+        animation-duration: 0.4s;
+        flex-direction: column;
+      }
 
-/* The Close Button */
-.close {
-  color: white;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
+      /* Add Animation */
+      @-webkit-keyframes animatetop {
+        from {
+          top: -300px;
+          opacity: 0
+        }
 
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-}
+        to {
+          top: 0;
+          opacity: 1
+        }
+      }
 
-.modal-header {
-  padding: 2px 16px;
-  background-color: #5cb85c;
-  color: white;
-}
+      @keyframes animatetop {
+        from {
+          top: -300px;
+          opacity: 0
+        }
 
-.modal-body {padding: 2px 16px;}
+        to {
+          top: 0;
+          opacity: 1
+        }
+      }
 
-.modal-footer {
-  padding: 2px 16px;
-  background-color: #5cb85c;
-  color: white;
-}
-</style>
-</head>
+      /* The Close Button */
+      .close {
+        color: white;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+      }
+
+      .close:hover,
+      .close:focus {
+        color: #000;
+        text-decoration: none;
+        cursor: pointer;
+      }
+
+      .modal-header {
+        padding: 2px 16px;
+        background-color: #5cb85c;
+        color: white;
+      }
+
+      .modal-body {
+        padding: 2px 100px;
+        display: flex;
+        flex-direction: column;
+      }
+
+      .modal-body img {
+        width: 50%;
+        height: 80%;
+        margin: 0 auto;
+      }
+
+      .modal-footer {
+        padding: 2px 16px;
+        background-color: #5cb85c;
+        color: white;
+      }
+
+
+      .img-gallery {
+        width: 80%;
+        margin: 50px auto 50px;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+        gap: 30px;
+      }
+
+      .img-gallery img {
+        width: 100%;
+        height: 80%;
+        cursor: pointer;
+        transition: 1s;
+      }
+
+      .img-gallery img:hover {
+        transform: scale(1.2);
+      }
+    </style>
+  </head>
+
 <body>
 
-<h2>Animated Modal with Header and Footer</h2>
+  <h2>Animated Modal with Header and Footer</h2>
 
-<!-- Trigger/Open The Modal -->
-<button id="myBtn">Open Modal</button>
 
-<!-- The Modal -->
-<div id="myModal" class="modal">
+  <div class="img-gallery">
+    <img src="img/LOGO_ORGANIZACION2.jpg" onclick="abrir(this.src)" alt="">
+    <img src="img/LOGO_ORGANIZACION1.jpg" onclick="abrir(this.src)" alt="">
+    <img src="img/LOGO-ORGANIZACION3.jpg" onclick="abrir(this.src)" alt="">
+    <img src="img/LOGO_ORGANIZACION4.jpg" onclick="abrir(this.src)" alt="">
+  </div>
 
-  <!-- Modal content -->
-  <div class="modal-content">
-    <div class="modal-header">
-      <span class="close">&times;</span>
-      <h2>Modal Header</h2>
-    </div>
-    <div class="modal-body">
-      <p>Some text in the Modal Body</p>
-      <p>Some other text...</p>
-    </div>
-    <div class="modal-footer">
-      <h3>Modal Footer</h3>
+  <div id="myModal" class="modal">
+    <div class="modal-content" id="contenido">
+      <div class="modal-header">
+        <span class="close" onclick="cerrar()">&times;</span>
+        <h2>Modal Header</h2>
+      </div>
+      <div class="modal-body">
+        <p>Some text in the Modal Body</p>
+        <img id="modalImage" src="" alt="">
+        <p>Some other text...</p>
+      </div>
+      <div class="modal-footer">
+        <h3>Modal Footer</h3>
+      </div>
     </div>
   </div>
 
-</div>
+  <script>
+    var modal = document.getElementById("myModal");
+    var modalImage = document.getElementById("modalImage");
 
-<script>
-// Get the modal
-var modal = document.getElementById("myModal");
+    function abrir(reference) {
+      modal.style.display = "flex";
+      modalImage.src = reference;
+    }
 
-// Get the button that opens the modal
-var btn = document.getElementById("myBtn");
+    function cerrar() {
+      modal.style.display = "none";
+    }
 
-// Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
-
-// When the user clicks the button, open the modal 
-btn.onclick = function() {
-  modal.style.display = "block";
-}
-
-// When the user clicks on <span> (x), close the modal
-span.onclick = function() {
-  modal.style.display = "none";
-}
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
-}
-</script>
+    window.onclick = function(event) {
+      if (event.target == modal) {
+        cerrar();
+      }
+    }
+  </script>
 
 </body>
+
 </html>
