--- a/Donaciones.html
+++ b/Donaciones.html
@@ -156,7 +156,11 @@
         <div class="modal-body">
         <img src="img/LOGO_ORGANIZACION2.jpg" id="fulImg" alt="">
             <p>Some text in the Modal Body</p>
-            <p>Some other text...</p>
+            <p>ARCA es una organización sin fines de lucro,
+                 compuesta por un equipo multidisciplinario 
+                 de profesionales, tales como médicos veterinarios 
+                 y abogados, todos versados en el manejo y cuidado 
+                 animal</p>
         </div>
         <div class="modal-footer">
             <h3>Modal Footer</h3>
