--- a/prueba.html
+++ b/prueba.html
@@ -95,7 +95,7 @@
 
       .modal-header {
         padding: 2px 16px;
-        background-color: #5cb85c;
+        background-color: #88a4c4;
         color: white;
       }
 
@@ -113,7 +113,7 @@
 
       .modal-footer {
         padding: 2px 16px;
-        background-color: #5cb85c;
+        background-color: #88a4c4;
         color: white;
       }
 
@@ -158,9 +158,20 @@
         <h2>Modal Header</h2>
       </div>
       <div class="modal-body">
-        <p>Some text in the Modal Body</p>
         <img id="modalImage" src="" alt="">
-        <p>Some other text...</p>
+        <p id="textoModal1">ARCA es una organización sin fines de lucro,
+          compuesta por un equipo multidisciplinario 
+          de profesionales, tales como médicos veterinarios 
+          y abogados, todos versados en el manejo y cuidado 
+          animal</p>
+          <p id="textoModal2">El propósito de esta organización es mejorar
+             la calidad de vida de los animales de compañía, especialmente 
+             de aquellos que se encuentran en condición de abandono o maltrato,
+              a través de actividades educativas, apoyo en operativos de 
+              esterilización y trabajando mancomunadamente con instituciones 
+              privadas o públicas.</p>
+
+          <p id="modalText">Some text in the Modal Body</p>
       </div>
       <div class="modal-footer">
         <h3>Modal Footer</h3>
@@ -171,10 +182,13 @@
   <script>
     var modal = document.getElementById("myModal");
     var modalImage = document.getElementById("modalImage");
-
+    var modalText1 = document.getElementById("textoModal1");
+    var modalText2 = document.getElementById("textoModal2");
     function abrir(reference) {
       modal.style.display = "flex";
       modalImage.src = reference;
+      modalText1.textContent = text;
+      modalText2.textContent = text;
 
       localStorage.setItem("modalVisible", "true");
     }
@@ -190,10 +204,10 @@
       localStorage.removeItem("modalVisible");
     }
 
-    window.onload = function() {
+        window.onload = function() {
       var modalVisible = localStorage.getItem("modalVisible");
       if (modalVisible) {
-        modal.style.display = "flex";
+        modal.style.display = "none";
       } else {
         modal.style.display = "none";
       }
