subiendo actualizacion de todo el proyecto actual

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <div class="col-sm-4">
                 <ul class="nav">
                     <li class="nav-item">
-                        <button class="nav-link" onclick="cambioHtml('inicioSesion')">Iniciar Sesion</button>
+                        <button class="nav-link text-dark" onclick="cambioHtml('inicioSesion')">Iniciar Sesion</button>
                     </li>
                     <li class="nav-item">
-                        <button class="nav-link" onclick="cambioHtml('registrarse')">Registrarme</button>
+                        <button class="nav-link text-dark" onclick="cambioHtml('registrarse')">Registrarme</button>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link " href="#">Ayuda</a>
