--- a/prueba.html
+++ b/prueba.html
@@ -8,6 +8,7 @@
     <style>
       body {
         font-family: Arial, Helvetica, sans-serif;
+        background-color:#ccc;
       }
 
 
@@ -34,6 +35,11 @@
         justify-content: center;
         position: fixed;
         border: 1px solid #888;
+            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
       }
 
       /* Modal Content */
@@ -122,8 +128,9 @@
         width: 80%;
         margin: 50px auto 50px;
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
         gap: 30px;
+        justify-content: center;
       }
 
       .img-gallery img {
@@ -136,6 +143,7 @@
       .img-gallery img:hover {
         transform: scale(1.2);
       }
+      
     </style>
   </head>
 
@@ -145,10 +153,10 @@
 
 
   <div class="img-gallery">
-    <img src="img/LOGO_ORGANIZACION2.jpg" onclick="abrir(this.src)" alt="">
-    <img src="img/LOGO_ORGANIZACION1.jpg" onclick="abrir(this.src)" alt="">
-    <img src="img/LOGO-ORGANIZACION3.jpg" onclick="abrir(this.src)" alt="">
-    <img src="img/LOGO_ORGANIZACION4.jpg" onclick="abrir(this.src)" alt="">
+    <img src="img/LOGO_ORGANIZACION2.jpg" onclick="abrir(this.src, 'image1')" alt="">
+    <img src="img/LOGO_ORGANIZACION1.jpg" onclick="abrir(this.src, 'image2')" alt="">
+    <img src="img/LOGO-ORGANIZACION3.jpg" onclick="abrir(this.src, 'image3')" alt="">
+    <img src="img/LOGO_ORGANIZACION4.jpg" onclick="abrir(this.src, 'image4')" alt="">
   </div>
 
   <div id="myModal" class="modal">
@@ -159,19 +167,7 @@
       </div>
       <div class="modal-body">
         <img id="modalImage" src="" alt="">
-        <p id="textoModal1">ARCA es una organización sin fines de lucro,
-          compuesta por un equipo multidisciplinario 
-          de profesionales, tales como médicos veterinarios 
-          y abogados, todos versados en el manejo y cuidado 
-          animal</p>
-          <p id="textoModal2">El propósito de esta organización es mejorar
-             la calidad de vida de los animales de compañía, especialmente 
-             de aquellos que se encuentran en condición de abandono o maltrato,
-              a través de actividades educativas, apoyo en operativos de 
-              esterilización y trabajando mancomunadamente con instituciones 
-              privadas o públicas.</p>
-
-          <p id="modalText">Some text in the Modal Body</p>
+        <p id="textoModal"></p>
       </div>
       <div class="modal-footer">
         <h3>Modal Footer</h3>
@@ -182,13 +178,30 @@
   <script>
     var modal = document.getElementById("myModal");
     var modalImage = document.getElementById("modalImage");
-    var modalText1 = document.getElementById("textoModal1");
-    var modalText2 = document.getElementById("textoModal2");
-    function abrir(reference) {
+    var modalText1 = document.getElementById("textoModal");
+    var TextoImagen = {
+      image1: {
+        title: "Título para la imagen 1",
+        description: "Descripción larga para la imagen 1. Este es un texto de ejemplo que puede ser tan largo como sea necesario."
+      },
+      image2: {
+        title: "Título para la imagen 2",
+        description: "Descripción larga para la imagen 2. Este es otro texto de ejemplo que puede contener una gran cantidad de contenido."
+      },
+      image3: {
+        title: "Título para la imagen 2",
+        description: "Descripción larga para la imagen 2. Este es otro texto de ejemplo que puede contener una gran cantidad de contenido."
+      },
+      image4: {
+        title: "Título para la imagen 2",
+        description: "Descripción larga para la imagen 2. Este es otro texto de ejemplo que puede contener una gran cantidad de contenido."
+      }
+    };
+
+    function abrir(reference, imageId) {
       modal.style.display = "flex";
       modalImage.src = reference;
-      modalText1.textContent = text;
-      modalText2.textContent = text;
+      modalText1.textContent = TextoImagen[imageId].description;
 
       localStorage.setItem("modalVisible", "true");
     }
