--- a/Contacto.html
+++ b/Contacto.html
@@ -29,15 +29,12 @@
 
 
 <h1 class="titulo_form">Formulario de Contacto</h1>
-<div id="contenedor_form">
+<div id="contenedor_form" class="justify-content-center">
     <h3 class="Subtitulo_form">Contacto</h3>
-    <div id="form_contacto">
-        <div id="seccion_datos">
-            <div>Cel</div>
-            <div>Correo</div>
-            <div>Direccion</div>
-        </div>
-        <div id="seccion_campos">
+    <div id="form_contacto" class="justify-content-center">
+
+        <div id="seccion_campos" class="container justify-content-center">
+
             <div id="campo_correo">
                 <label for="correoinput" class="form-label">Correo</label>
                 <input type="email" class="form-control" id="correoinput" placeholder="micorreo@ejemplo.com">
@@ -68,6 +65,7 @@
             </div>
             <button id="btn_enviar">Enviar</button>
         </div>
+
     </div>
 </div>
 
