--- a/Donaciones.html
+++ b/Donaciones.html
@@ -12,11 +12,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="styleDonaciones.css">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/styleDonacione.css">
+    <link rel="stylesheet" type="text/css" href="css/styleDonaciones.css">
 
 </head>
 <style>
@@ -28,86 +27,7 @@
 </style>
 
 <body>
-<header>
-    <div id="primera-barra" class="container-fluid ">
-        <div class="row">
-            <div class="col-sm-8">
-                <img src="img/brit.png" alt="brit">
-                <img src="img/acana.png" alt="acana">
-                <img src="img/granplus1.png" alt="granplus">
-                <img src="img/biljac.png" alt="biljac">
-                <img src="img/royalcanin.png" alt="royalcanin">
-                <img src="img/nutragold.png" alt="nutragold">
-                <img src="img/biofresh.png" alt="biofresh">
-                <img src="img/vetlife.jpg" alt="vetlife">
-                <img src="img/logo-hill.svg" alt="hill's">
-            </div>
-            <div class="col-sm-4">
-                <ul class="nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="inicioSesion.html">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="registrarse.html">Registrarme</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="#">Ayuda</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div id="navegador" class="navbar navbar-expand-sm  justify-content-center">
-        <div class="container-fluid">
-            <a class="navbar-brand " href="index.html">
-                <img src="img/petslife-logo.svg" alt="pagina Logo1">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
 
-            <div class="collapse navbar-collapse justify-content-start" id="mynavbar">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Comida</a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Perro</a></li>
-                            <li><a class="dropdown-item" href="#">Gato</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Tienda.html">Tienda</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Contacto.html">Contacto</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Donaciones.html">Donaciones</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Nosotros.html">Nosotros</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <img src="img/usuario.jpg" alt="usuario" style="height: 20px; width: 20px;  "
-                                 class="rounded-pill">
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Francisco Eljuri</a>
-                    </li>
-                </ul>
-            </div>
-            <form class="d-flex">
-                <input class="form-control me-2" type="text" placeholder=" ">
-                <button class="btn btn-secondary" type="button">Buscar</button>
-            </form>
-        </div>
-    </div>
-</header>
 
     <section class="donaciones">
         <div class="container my-5">
@@ -170,7 +90,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
         integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
         crossorigin="anonymous"></script>
-            <script src="Donacion.js"></script>
+            <script src="js/Donacion.js"></script>
 </body>
 
 </html>
