--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>PetsLife</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="js/refreshHtml.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <title>PetsLife</title>
 </head>
 <style>
     body {
@@ -39,10 +39,10 @@
             <div class="col-sm-4">
                 <ul class="nav">
                     <li class="nav-item">
-                        <button class="nav-link text-dark" onclick="cambioHtml('inicioSesion')">Iniciar Sesion</button>
+                        <a class="nav-link " href="inicioSesion.html">Iniciar Sesion</a>
                     </li>
                     <li class="nav-item">
-                        <button class="nav-link text-dark" onclick="cambioHtml('registrarse')">Registrarme</button>
+                        <a class="nav-link " href="regiones2.html">Registrarme</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link " href="#">Ayuda</a>
@@ -379,12 +379,8 @@
     <!-- Copyright -->
 </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
-        integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
-        integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
-        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
 <script crossorigin="anonymous" src="https://kit.fontawesome.com/f92816fa7c.js"></script>
 </body>
 </html>
