--- a/regiones2.html
+++ b/regiones2.html
@@ -5,14 +5,13 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Inicio Sesion</title>
-
-    <link rel="stylesheet" type="text/css" href="css/styleInicio.css">
+    <title>Registrarse</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/styleRgistrarse.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/refreshHtml.js"></script>
 
@@ -25,6 +24,7 @@
     }
 </style>
 <body>
+
 <header>
     <div id="primera-barra" class="container-fluid ">
         <div class="row">
@@ -105,35 +105,60 @@
         </div>
     </div>
 </header>
-<div id="formulario2" class="container">
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-header bg-primary text-white">
-                    <h4 class="mb-0">Inicio de sesión</h4>
-                </div>
-                <div class="card-body">
-                    <form>
-                        <div class="form-group">
-                            <label for="inputEmail">Correo electrónico</label>
-                            <input type="email" class="form-control" id="inputEmail" required autofocus>
-                        </div>
-                        <div class="form-group">
-                            <label for="inputPassword">Contraseña</label>
-                            <input type="password" class="form-control" id="inputPassword" required>
-                        </div>
-                        <button class="btn btn-lg btn-primary btn-block" type="submit">Iniciar sesión</button>
-                    </form>
-                    <div class="text-center mt-3">
-                        <a href="regiones2.html">¿No tienes cuenta? Regístrate aquí</a>
-                        <br>
-                        <a href="recuperarCuenta.html">¿Olvidaste tu contraseña?</a>
+
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h3>Registrarse</h3>
+                    </div>
+                    <div class="card-body">
+                        <form id="register-form">
+                            <div class="mb-3">
+                                <label for="nombre" class="form-label">Nombre:</label>
+                                <input type="text" class="form-control" id="nombre" name="nombre" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="apellido" class="form-label">Apellido:</label>
+                                <input type="text" class="form-control" id="apellido" name="apellido" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Email:</label>
+                                <input type="email" class="form-control" id="email" name="email" required>
+                            </div>
+                            <form>
+                                <div class="mb-3">
+                                    <label for="region" class="form-label">Región:</label>
+                                    <select id="region" name="region" class="form-control"></select>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="comuna" class="form-label">Comuna:</label>
+                                    <select id="comuna" name="comuna" class="form-control"></select>
+                                </div>
+                            <script src="regiones.js"></script>
+                            </form>
+                            <div class="mb-3">
+                                <label for="password" class="form-label">Contraseña:</label>
+                                <input type="password" class="form-control" id="password" name="password" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="confirm-password" class="form-label">Confirmar Contraseña:</label>
+                                <input type="password" class="form-control" id="confirm-password" name="confirm-password" required>
+                            </div>
+                            <div class="mb-3 form-check">
+                                <input type="checkbox" class="form-check-input" id="aceptar-terminos" required>
+                                <label class="form-check-label" for="aceptar-terminos">Acepto los términos y condiciones</label>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Registrarse</button>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+
+
 <footer class=" footer">
     <!-- Grid container -->
     <div class="container p-4">
@@ -232,6 +257,8 @@
     </div>
     <!-- Copyright -->
 </footer>
+
+
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
         integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
         crossorigin="anonymous"></script>
@@ -241,4 +268,3 @@
 <script crossorigin="anonymous" src="https://kit.fontawesome.com/f92816fa7c.js"></script>
 </body>
 </html>
-
