--- a/inicioSesion.html
+++ b/inicioSesion.html
@@ -66,7 +66,7 @@
             <div class="collapse navbar-collapse justify-content-start" id="mynavbar">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <button class="nav-link" onclick="cambioHtml('index')">Inicio</button>
+                        <a class="nav-link " href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Comida</a>
@@ -76,16 +76,16 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="Tienda.html">Tienda</a>
+                        <a class="nav-link " href="index.html">Tienda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="Contacto.html">Contacto</a>
+                        <a class="nav-link " href="index.html">Contacto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="Donaciones.html">Donaciones</a>
+                        <a class="nav-link " href="index.html">Donaciones</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="Nosotros.html">Nosotros</a>
+                        <a class="nav-link " href="index.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">
