--- a/Contacto.html
+++ b/Contacto.html
@@ -29,11 +29,11 @@
 
 
 <h1 class="titulo_form">Formulario de Contacto</h1>
-<div id="contenedor_form" class="justify-content-center">
+<div id="contenedor_form" >
     <h3 class="Subtitulo_form">Contacto</h3>
-    <div id="form_contacto" class="justify-content-center">
+    <div id="form_contacto" >
 
-        <div id="seccion_campos" class="container justify-content-center">
+        <div id="seccion_campos" >
 
             <div id="campo_correo">
                 <label for="correoinput" class="form-label">Correo</label>
